* ParsoidOutputAccess and all of its methods have been deprecated.  Use
  ParserOutputAccess with ParserOptions::setUseParsoid() instead.
* ParserOutput::addJsConfigVars(), deprecated since 1.38, now emits deprecation
  warnings. Use ParserOutput::setJsConfigVar() instead.
* ParserOutput::setLanguageLinks(null) now emits deprecation warnings.  Use
  an empty array as an argument, not `null`.
* To support a future change allowing serializing of MessageValue objects
  as JSON, the methods MessageValue::objectParams(), Message::objectParams()
  and Message::objectParam() are deprecated. The UserGroupMembershipParam
  class and the ParamType::OBJECT constant are likewise deprecated.
* The Less mixin .column-break-after-avoid() is deprecated. Use just the
  CSS rule `break-after: avoid-column;` instead now.
* The following method are deprecated; instead call the appropriate
  constructor method in PageRestHelperFactory with the appropriate
  initialization arguments:
  * HtmlOutputRendererHelper::init()
  * HtmlMessageOutputHelper::init()
  * HtmlInputTransformHelper::init()
  Similarly, calling the constructor method in PageRestHelperFactory
  without the appropriate initialization arguments is now deprecated.
* HTMLForm methods getPreText, setPreText, addPreText, getPostText,
  setPostText, addPostText, getHeaderText, setHeaderText, addHeaderText,
  getFooterText, setFooterText and addFooterText, deprecated since 1.38, now
  emit deprecation warnings.
* FormSpecialPage methods preText and postText, deprecated since 1.38, now
  emit deprecation warnings.
* EditPage::internalAttemptSave() is deprecated as part of cleaning up how
  edits are saved, see T157658 for details.
* The MessageCache::get hook, deprecated since 1.41, now emits deprecation
  warnings.
* Twelve deprecated properties of OutputPage now will emit warnings; their
  relevant getters or setters should be used instead:
  * mCategoryLinks       - getCategoryLinks() and setCategoryLinks()