@@ -885,6 +885,8 @@ because of Phabricator reports.
   warnings. Use ParserOutput::setJsConfigVar() instead.
 * ParserOutput::setLanguageLinks(null) now emits deprecation warnings.  Use
   an empty array as an argument, not `null`.
+* ParserOutput::setPageProperty() now emits deprecation warnings when called
+  with non-string values, which has been deprecated since 1.42.
 * To support a future change allowing serializing of MessageValue objects
   as JSON, the methods MessageValue::objectParams(), Message::objectParams()
   and Message::objectParam() are deprecated. The UserGroupMembershipParam
